more blog post styling

--- a/client/src/styles/PageHeader.css
+++ b/client/src/styles/PageHeader.css
@@ -9,8 +9,7 @@
 }
 
 .page-header-title {
-  padding: 10px;
-  padding-left: 20px;
+  padding: 10px 10px 10px 20px;
 }
 
 .page-header-profile-image {
