--- a/client/src/styles/BlogPost.css
+++ b/client/src/styles/BlogPost.css
@@ -1,8 +1,10 @@
 ﻿.blog-post {
   margin-top: 20px;
+  padding: 20px;
   border: 1px solid #f1f1f1;
   border-radius: 7px;
-  background-color: #fafafa;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 10px #ececec;
 }
 
 .blog-post-content {
@@ -22,4 +24,9 @@
   padding: 0;
   margin: 0;
   color: #929292;
+}
+
+.blog-post-text {
+  margin-top: 30px;
+  white-space: pre-line;
 }
