--- a/client/src/styles/BlogPost.css
+++ b/client/src/styles/BlogPost.css
@@ -1,4 +1,4 @@
-﻿.blog-post {
+.blog-post {
   margin-top: 20px;
   padding: 20px;
   border: 1px solid #f1f1f1;
@@ -27,6 +27,9 @@
 }
 
 .blog-post-text {
-  margin-top: 30px;
-  white-space: pre-line;
+  margin-top: 40px;
+}
+
+.blog-post-text p {
+  margin: 0;
 }
